--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "lit-element": "^2.4.0",
+    "lit": "^3.3.0",
     "custom-card-helpers": "^1.9.0"
   },
   "devDependencies": {
