--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "custom-card-helpers": "^1.9.0",
     "lit": "^3.3.0",
-    "custom-card-helpers": "^1.9.0"
+    "luxon": "^3.7.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "ts-loader": "^9.4.2",
+    "@types/jest": "^29.5.0",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^18.15.0",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.0"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
