--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "custom-card-helpers": "^1.9.0",
     "lit": "^3.3.0",
+    "@lit-labs/signals": "^0.1.3",
     "luxon": "^3.7.1"
   },
   "devDependencies": {
