--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "webpack --watch --mode=development",
     "update-card-tools": "npm uninstall card-tools && npm install thomasloven/lovelace-card-tools",
     "type-check": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "analyze": "webpack --analyze"
   },
   "keywords": [
     "home-assistant",
@@ -22,18 +23,17 @@
   "dependencies": {
     "custom-card-helpers": "^1.9.0",
     "lit": "^3.3.0",
-    "@lit-labs/signals": "^0.1.3",
-    "luxon": "^3.7.1"
+    "@lit-labs/signals": "^0.1.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "@types/luxon": "^3.6.2",
     "@types/node": "^18.15.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
