--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.9.0",
-    "lit": "^3.3.0",
-    "@lit-labs/signals": "^0.1.3"
+    "lit": "^3.3.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
@@ -33,7 +32,7 @@
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-bundle-analyzer": "^4.10.1"
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^4.9.2"
   }
 }
