--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@lit-labs/motion": "^1.0.9",
     "custom-card-helpers": "^1.9.0",
     "lit": "^3.3.0"
   },
